fix: hazard detail z-index

--- a/assets/css/hazard-detail-card.css
+++ b/assets/css/hazard-detail-card.css
@@ -8,7 +8,7 @@
   max-width: 30.625rem;
   position: absolute;
   bottom: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .report-card__top-controls {
